added png support

--- a/main/foodandhealth/package.json
+++ b/main/foodandhealth/package.json
@@ -11,9 +11,11 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "fs": "^0.0.1-security",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
     "request": "^2.88.2"
   }
 }
